# occurence-radar

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  stack.env
occurrence_radar/: manage.py
occurrence_radar/occurrence_radar/: asgi.py  settings.py  urls.py  wsgi.py
occurrence_radar/reports/: admin.py  forms.py  models.py  urls.py  views.py
occurrence_radar/reports/migrations/: 0001_initial.py  0002_eventtype_alter_occurrencemodel_event_type.py
occurrence_radar/reports/templates/reports/: base.html  occurrence_display.html  occurrence_report.html
