[project]
name = "occurence-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
prod = [
    "gunicorn>=26.0.0",
]
